# CG_course_project

./: README.md
code/: graphics.py
code/planet_system/: CMakeLists.txt  build_debug.sh  build_release.sh  edge.cpp  edge.h  gen_image.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_test.sh  mygraphicsview.cpp  mygraphicsview.h  planeta.cpp  planeta.h  planetb.cpp  point.cpp  point.h  sphere.cpp  sphere.h  star.cpp  star.h  testg.cpp  testg.h  time_measure.sh  vector.cpp  vector.h
code/planet_system/.qt/: QtDeploySupport.cmake
docs/: .$Pol.drawio.bkp  .$Z.drawio.bkp  .$idef.drawio.bkp  .$idef.drawio.dtmp  1_introduction.tex  2_analytical.tex  3_design.tex  4_technological.tex  5_research.tex  6_conclusion.tex  7_biblio.tex  RPZ.tex  report.tex
docs/scheme/: .$All.drawio.bkp  .$P_zak.drawio.bkp  .$Pol.drawio.bkp  .$Z.drawio.bkp  .$idef.drawio.bkp  All.drawio  P_zak.drawio  Pol.drawio  Untitled.mdj  Z.drawio  idef.drawio
docs/style/: preambule.inc.tex
practice/docs/: Otchet.tex  class_diagram.mdj  idef.drawio
practice/new_code/: drawer.cpp  drawer.h  gen_image.sh  light.cpp  light.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  new_code.pro  normal.cpp  normal.h  polygon.cpp  polygon.h  scene.cpp  scene.h  surface.cpp  surface.h  timer.cpp  timer.h  zbuffer.cpp  zbuffer.h
some_staf/: Planet_sistem.drawio
